StorageContainer Re-factoring
SVN-Revision: 23564