@@ -34,21 +34,17 @@ import edu.wustl.catissuecore.util.StorageContainerUtil;
 import edu.wustl.catissuecore.util.global.AppUtility;
 import edu.wustl.catissuecore.util.global.Constants;
 import edu.wustl.common.audit.AuditManager;
-import edu.wustl.common.beans.NameValueBean;
 import edu.wustl.common.beans.SessionDataBean;
 import edu.wustl.common.domain.AbstractDomainObject;
 import edu.wustl.common.exception.ApplicationException;
 import edu.wustl.common.exception.AuditException;
 import edu.wustl.common.exception.BizLogicException;
 import edu.wustl.common.exception.ErrorKey;
-import edu.wustl.common.util.NameValueBeanRelevanceComparator;
-import edu.wustl.common.util.XMLPropertyHandler;
 import edu.wustl.common.util.global.ApplicationProperties;
 import edu.wustl.common.util.global.Status;
 import edu.wustl.common.util.global.Validator;
 import edu.wustl.common.util.logger.Logger;
 import edu.wustl.dao.DAO;
-import edu.wustl.dao.JDBCDAO;
 import edu.wustl.dao.QueryWhereClause;
 import edu.wustl.dao.condition.EqualClause;
 import edu.wustl.dao.exception.DAOException;
@@ -66,25 +62,10 @@ import edu.wustl.security.manager.SecurityManagerFactory;
  */
 public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 {
-
 	/**
 	 * Logger object.
 	 */
-	private final transient Logger logger = Logger.getCommonLogger(StorageContainerBizLogic.class);
-
-	/**
-	 * Getting containersMaxLimit from the xml file in static variable.
-	 */
-	private static final int containersMaxLimit = Integer.parseInt(XMLPropertyHandler
-			.getValue(Constants.CONTAINERS_MAX_LIMIT));
-	private static final String TYPE_CONTAINER = "container";
-	private static final String TYPE_SPECIMEN = "specimen";
-	private static final String TYPE_SPECIMEN_ARRAY = "specimen_array";
-	private static final boolean IS_CP_UNIQUE = true;
-	private static final boolean IS_SPCLASS_UNIQUE = true;
-	private static final boolean IS_CP_NONUNIQUE = false;
-	private static final boolean IS_SPCLASS_NONUNIQUE = false;
-
+	private static final transient Logger logger = Logger.getCommonLogger(StorageContainerBizLogic.class);
 	/**
 	 * Saves the storageContainer object in the database.
 	 * @param dao - DAo object
@@ -94,17 +75,18 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	 *            The session in which the object is saved.
 	 * @throws BizLogicException throws BizLogicException
 	 */
-	protected void insert(Object obj, DAO dao, SessionDataBean sessionDataBean)
+	protected void insert(Object obj, final DAO dao, final SessionDataBean sessionDataBean)
 			throws BizLogicException
 	{
 		try
 		{
 			final StorageContainer container = (StorageContainer) obj;
 			container.setActivityStatus(Status.ACTIVITY_STATUS_ACTIVE.toString());
-			SiteBizLogic sBiz = new SiteBizLogic();
-			StorageTypeBizLogic stBiz = new StorageTypeBizLogic();
+			final SiteBizLogic sBiz = new SiteBizLogic();
+			final StorageTypeBizLogic stBiz = new StorageTypeBizLogic();
 			int posOneCapacity = 1, posTwoCapacity = 1;
-			int positionDimensionOne = Constants.STORAGE_CONTAINER_FIRST_ROW, positionDimensionTwo = Constants.STORAGE_CONTAINER_FIRST_COLUMN;
+			int posDimOne = Constants.STORAGE_CONTAINER_FIRST_ROW, posDimTwo 
+			= Constants.STORAGE_CONTAINER_FIRST_COLUMN;
 			boolean[][] fullStatus = null;
 			final int noOfContainers = container.getNoOfContainers().intValue();
 			if (container.getLocatedAtPosition() != null
@@ -138,9 +120,9 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 								.getLocatedAtPosition().getPositionDimensionOne().toString(),
 								container.getLocatedAtPosition().getPositionDimensionTwo()
 										.toString(), sessionDataBean, false, null);
-						final boolean parentContainerValidToUSe = StorageContainerUtil.isParentContainerValidToUSe(
+						final boolean parentContValidToUSe = StorageContainerUtil.isParentContainerValidToUSe(
 								container, parentContainer);
-						if (!parentContainerValidToUSe)
+						if (!parentContValidToUSe)
 						{
 							throw this.getBizLogicException(null, "parent.container.not.valid", "");
 						}
@@ -153,8 +135,8 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 								.intValue();
 						fullStatus = StorageContainerUtil.getStorageContainerFullStatus(dao, parentContainer,
 								children);
-						positionDimensionOne = cntPos.getPositionDimensionOne().intValue();
-						positionDimensionTwo = cntPos.getPositionDimensionTwo().intValue();
+						posDimOne = cntPos.getPositionDimensionOne().intValue();
+						posDimTwo = cntPos.getPositionDimensionTwo().intValue();
 						container.setLocatedAtPosition(cntPos);
 					}
 				}
@@ -175,13 +157,12 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 						&& cont.getLocatedAtPosition().getParentContainer() != null)
 				{
 					final ContainerPosition cntPos = cont.getLocatedAtPosition();
-
-					cntPos.setPositionDimensionOne(new Integer(positionDimensionOne));
-					cntPos.setPositionDimensionTwo(new Integer(positionDimensionTwo));
+					cntPos.setPositionDimensionOne(Integer.valueOf(posDimOne));
+					cntPos.setPositionDimensionTwo(Integer.valueOf(posDimTwo));
 					cntPos.setOccupiedContainer(cont);
 					cont.setLocatedAtPosition(cntPos);
 				}
-				this.logger.debug("Collection protocol size:"
+				logger.debug("Collection protocol size:"
 						+ container.getCollectionProtocolCollection().size());
 				if (edu.wustl.catissuecore.util.global.Variables.isStorageContainerLabelGeneratorAvl)
 				{
@@ -195,7 +176,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 					}
 					catch (final NameGeneratorException e)
 					{
-						this.logger.error(e.getMessage(), e);
+						logger.error(e.getMessage(), e);
 						e.printStackTrace() ;
 						throw this.getBizLogicException(e, "name.generator.exp", "");
 					}
@@ -209,7 +190,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 					}
 					catch (final NameGeneratorException e)
 					{
-						this.logger.error(e.getMessage(), e);
+						logger.error(e.getMessage(), e);
 						e.printStackTrace();
 						throw this.getBizLogicException(e, "name.generator.exp", "");
 					}
@@ -230,42 +211,41 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 				{
 					do
 					{
-						if (positionDimensionTwo == posTwoCapacity)
+						if (posDimTwo == posTwoCapacity)
 						{
-							if (positionDimensionOne == posOneCapacity)
+							if (posDimOne == posOneCapacity)
 							{
-								positionDimensionOne = Constants.STORAGE_CONTAINER_FIRST_ROW;
+								posDimOne = Constants.STORAGE_CONTAINER_FIRST_ROW;
 							}
 							else
 							{
-								positionDimensionOne = (positionDimensionOne + 1)
+								posDimOne = (posDimOne + 1)
 										% (posOneCapacity + 1);
 							}
-							positionDimensionTwo = Constants.STORAGE_CONTAINER_FIRST_COLUMN;
+							posDimTwo = Constants.STORAGE_CONTAINER_FIRST_COLUMN;
 						}
 						else
 						{
-							positionDimensionTwo = positionDimensionTwo + 1;
+							posDimTwo = posDimTwo + 1;
 						}
 
-						this.logger.debug("positionDimensionTwo: " + positionDimensionTwo);
-						this.logger.debug("positionDimensionOne: " + positionDimensionOne);
+						logger.debug("positionDimensionTwo: " + posDimTwo);
+						logger.debug("positionDimensionOne: " + posDimOne);
 					}
-					while (fullStatus[positionDimensionOne][positionDimensionTwo] != false);
+					while (fullStatus[posDimOne][posDimTwo] != false);
 				}
 			}
-
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 		catch (final ApplicationException e)
 		{
-			this.logger.error(e.getMessage(), e);
+			logger.error(e.getMessage(), e);
 			e.printStackTrace();
 			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
@@ -275,7 +255,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	 * @return string array of DynamicGroups
 	 * @throws SMException - throws SMException
 	 */
-	protected String[] getDynamicGroups(AbstractDomainObject obj) throws SMException
+	protected String[] getDynamicGroups(final AbstractDomainObject obj) throws SMException
 	{
 		String[] dynamicGroups = null;
 		final StorageContainer storageContainer = (StorageContainer) obj;
@@ -298,7 +278,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	 * @param dao DAO object
 	 * @param sessionDataBean SessionDataBean
 	 */
-	public void postInsert(Object obj, DAO dao, SessionDataBean sessionDataBean)
+	public void postInsert(final Object obj, final DAO dao, final SessionDataBean sessionDataBean)
 			throws BizLogicException
 	{
 		super.postInsert(obj, dao, sessionDataBean);
@@ -313,14 +293,14 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	 *            The session in which the object is saved.
 	 * @throws BizLogicException throws BizLogicException
 	 */
-	protected void update(DAO dao, Object obj, Object oldObj, SessionDataBean sessionDataBean)
+	protected void update(final DAO dao, Object obj, Object oldObj, SessionDataBean sessionDataBean)
 			throws BizLogicException
 	{
 		try
 		{
 			final StorageContainer container = (StorageContainer) obj;
 			final StorageContainer oldContainer = (StorageContainer) oldObj;
-			SiteBizLogic sBiz = new SiteBizLogic();
+			final SiteBizLogic sBiz = new SiteBizLogic();
 			StorageContainer persistentOldContainerForChange = null;
 			final Object object = dao.retrieveById(StorageContainer.class.getName(), oldContainer
 					.getId());
@@ -332,7 +312,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 								.getLocatedAtPosition().getParentContainer().getId());
 				container.getLocatedAtPosition().setParentContainer(parentStorageContainer);
 			}
-			this.logger.debug("container.isParentChanged() : " + container.isParentChanged());
+			logger.debug("container.isParentChanged() : " + container.isParentChanged());
 			if (container.isParentChanged())
 			{
 				if (container.getLocatedAtPosition() != null
@@ -344,7 +324,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 						throw this.getBizLogicException(null,
 								"errors.container.under.subcontainer", "");
 					}
-					this.logger.debug("Loading ParentContainer: "
+					logger.debug("Loading ParentContainer: "
 							+ container.getLocatedAtPosition().getParentContainer().getId());
 					if (false == StorageContainerUtil.validatePosition(dao, container))
 					{
@@ -352,7 +332,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 								"errors.storageContainer.dimensionOverflow", "");
 					}
 					final boolean canUse = StorageContainerUtil.isContainerAvailableForPositions(dao, container);
-					this.logger.debug("canUse : " + canUse);
+					logger.debug("canUse : " + canUse);
 					if (!canUse)
 					{
 						throw this.getBizLogicException(null, "errors.storageContainer.inUse", "");
@@ -380,10 +360,10 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 					if (!list.isEmpty())
 					{
 						final Object[] obj1 = (Object[]) list.get(0);
-						this.logger.debug("**************PC obj::::::: --------------- " + obj1);
-						this.logger.debug((Long) obj1[0]);
-						this.logger.debug((Integer) obj1[1]);
-						this.logger.debug((Integer) obj1[2]);
+						logger.debug("**************PC obj::::::: --------------- " + obj1);
+						logger.debug((Long) obj1[0]);
+						logger.debug((Integer) obj1[1]);
+						logger.debug((Integer) obj1[2]);
 
 						final Integer pcCapacityOne = (Integer) obj1[1];
 						final Integer pcCapacityTwo = (Integer) obj1[2];
@@ -410,7 +390,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 					{
 						final boolean canUse = StorageContainerUtil
 								.isContainerAvailableForPositions(dao, container);
-						this.logger.debug("canUse : " + canUse);
+						logger.debug("canUse : " + canUse);
 						if (!canUse)
 						{
 
@@ -468,12 +448,12 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 			}
 			sBiz.setSiteForSubContainers(container, container.getSite(), dao);
 			final boolean restrictionsCanChange = StorageContainerUtil.isContainerEmpty(dao, container);
-			this.logger.info("--------------container Available :" + restrictionsCanChange);
+			logger.info("--------------container Available :" + restrictionsCanChange);
 			if (!restrictionsCanChange)
 			{
 				final boolean restrictionsChanged = StorageContainerUtil.checkForRestrictionsChanged(container,
 						oldContainer);
-				this.logger.info("---------------restriction changed -:" + restrictionsChanged);
+				logger.info("---------------restriction changed -:" + restrictionsChanged);
 				if (restrictionsChanged)
 				{
 
@@ -490,7 +470,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 			final AuditManager auditManager = this.getAuditManager(sessionDataBean);
 			auditManager.updateAudit(dao, obj, oldObj);
 			auditManager.updateAudit(dao, container.getCapacity(), oldContainer.getCapacity());
-			this.logger.debug("container.getActivityStatus() " + container.getActivityStatus());
+			logger.debug("container.getActivityStatus() " + container.getActivityStatus());
 			if (container.getActivityStatus().equals(Status.ACTIVITY_STATUS_DISABLED.toString()))
 			{
 				final Long[] containerIDArr = {container.getId()};
@@ -503,7 +483,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 					this.setDisableToSubContainer(persistentOldContainerForChange, disabledConts,
 							dao, disabledContainerList);
 					persistentOldContainerForChange.getOccupiedPositions().clear();
-					this.logger.debug("container.getActivityStatus() "
+					logger.debug("container.getActivityStatus() "
 							+ container.getActivityStatus());
 					this.disableSubStorageContainer(dao, sessionDataBean, disabledContainerList);
 					final ContainerPosition prevPosition = persistentOldContainerForChange
@@ -523,14 +503,14 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 		catch (final AuditException e)
 		{
-			this.logger.error(e.getMessage(), e);
+			logger.error(e.getMessage(), e);
 			e.printStackTrace();
 			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
@@ -597,7 +577,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final ApplicationException exp)
 		{
-			this.logger.error(exp.getMessage(), exp);
+			logger.error(exp.getMessage(), exp);
 			exp.printStackTrace();
 			throw this.getBizLogicException(exp, exp.getErrorKeyName(), exp.getMsgValues());
 		}
@@ -645,11 +625,10 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		try
 		{
 			super.postUpdate(dao, currentObj, oldObj, sessionDataBean);
-
 		}
 		catch (final ApplicationException e)
 		{
-			this.logger.error(e.getMessage(), e);
+			logger.error(e.getMessage(), e);
 			e.printStackTrace();
 			throw this.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 		}
@@ -677,15 +656,15 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 			queryWhereClause.addCondition(new EqualClause(Constants.SYSTEM_IDENTIFIER, Long
 					.valueOf(storageContainerID)));
 			final List list = dao.retrieve(sourceObjectName, selectColumnName, queryWhereClause);
-			if (list.size() != 0)
+			if (!list.isEmpty())
 			{
 				final Object[] obj = (Object[]) list.get(0);
-				this.logger.debug("**********SC found for given ID ****obj::::::: --------------- "
+				logger.debug("**********SC found for given ID ****obj::::::: --------------- "
 						+ obj);
-				this.logger.debug((Long) obj[0]);
-				this.logger.debug((Integer) obj[1]);
-				this.logger.debug((Integer) obj[2]);
-				this.logger.debug((String) obj[3]);
+				logger.debug((Long) obj[0]);
+				logger.debug((Integer) obj[1]);
+				logger.debug((Integer) obj[2]);
+				logger.debug((String) obj[3]);
 
 				final StorageContainer pc = new StorageContainer();
 				pc.setId((Long) obj[0]);
@@ -699,7 +678,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 				}
 				// check if user has privilege to use the container
 				final boolean hasAccess = StorageContainerUtil.validateContainerAccess(dao, pc, sessionDataBean);
-				this.logger.debug("hasAccess..............." + hasAccess);
+				logger.debug("hasAccess..............." + hasAccess);
 				if (!hasAccess)
 				{
 					throw this.getBizLogicException(null, "access.use.object.denied", "");
@@ -707,13 +686,13 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 				this.checkStatus(dao, pc, "Storage Container");
 				new SiteBizLogic().checkClosedSite(dao, pc.getId(), "Container Site");
 				final boolean isValidPosition = StorageContainerUtil.validatePosition(pc, positionOne, positionTwo);
-				this.logger.debug("isValidPosition : " + isValidPosition);
+				logger.debug("isValidPosition : " + isValidPosition);
 				boolean canUsePosition = false;
 				if (isValidPosition) // if position is valid
 				{
 					canUsePosition = StorageContainerUtil.isPositionAvailable(dao, pc, positionOne, positionTwo,
 							specimen);
-					this.logger.debug("canUsePosition : " + canUsePosition);
+					logger.debug("canUsePosition : " + canUsePosition);
 					if (!canUsePosition)
 					{
 						if (multipleSpecimen)
@@ -742,7 +721,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
@@ -781,8 +760,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 			}
 			if (container.getNoOfContainers() == null)
 			{
-				final Integer conts = new Integer(1);
-				container.setNoOfContainers(conts);
+				container.setNoOfContainers(Integer.valueOf(1));
 			}
 			if (Validator.isEmpty(container.getNoOfContainers().toString()))
 			{
@@ -913,78 +891,14 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
 
 	}
-
-	/**
-	 * Returns a list of storage containers. Each index corresponds to the entry:<br>
-	 * 		[id, name, one_dimension_capacity, two_dimension_capacity ...]
-	 * @param holdsType - The type that the containers can 
-	 * hold (Specimen/SpecimenArray/Container)
-	 * @param cpId - Collection Protocol Id
-	 * @param spClass - Specimen Class
-	 * @param aliquotCount - Number of aliquotes that the fetched containers 
-	 * should minimally support. A value of <b>0</b> specifies that there's
-	 * no such restriction
-	 * @param containerTypeId  containerTypeId
-	 * @param specimenArrayTypeId specimenArrayTypeId
-	 * @param exceedingLimit exceedingLimit value
-	 * @param storageType Auto, Manual, Virtual
-	 * @return a list of storage containers
-	 * @throws DAOException
-	 */
-	private List getStorageContainerList(String holdsType, final Long cpId, final String spClass,
-			int aliquotCount, final SessionDataBean sessionData, Long containerTypeId,
-			Long specimenArrayTypeId, String exceedingLimit, String storageType) throws BizLogicException, DAOException
-	{
-		final JDBCDAO dao = this.openJDBCSession();
-		final List containers = new ArrayList();
-		try
-		{
-			final String[] queries = this
-					.getStorageContainerQueries(holdsType, cpId, spClass, aliquotCount,
-							sessionData, containerTypeId, specimenArrayTypeId, exceedingLimit);
-
-			int remainingContainersNeeded = containersMaxLimit;
-			// iteratively run each query, and break if the required number of containers are found
-			for (int i = 0; i < queries.length; i++)
-			{
-				this.logger.debug(String.format("Firing query: query%d", i));
-				this.logger.debug(queries[i]);
-				final List resultList = dao.executeQuery(queries[i]);
-				if (resultList == null || resultList.size() == 0)
-				{
-					continue;
-				}
-				if(!"Manual".equals(storageType) && resultList.size() >= remainingContainersNeeded)
-				{
-					List subListOfCont = resultList.subList(0, remainingContainersNeeded);
-					if(!containers.containsAll( subListOfCont ))
-					{
-					  containers.addAll(subListOfCont);
-					  break;
-					}
-				}
-				if(!containers.containsAll( resultList ))
-				{
-				   containers.addAll(resultList);
-				}
-				remainingContainersNeeded = remainingContainersNeeded - resultList.size();
-			}
-		}
-		finally
-		{
-			this.closeJDBCSession(dao);
-		}
-		logger.debug(String.format("%s:%s:%d", this.getClass().getSimpleName(),
-				"getStorageContainers() number of containers fetched", containers.size()));
-		return containers;
-	}
+	
 	/**
 	 * @return list of storage containers
 	 * @throws BizLogicException throws BizLogicException
@@ -994,115 +908,9 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		final String sourceObjectName = StorageContainer.class.getName();
 		final String[] displayNameFields = {Constants.SYSTEM_IDENTIFIER};
 		final String valueField = Constants.SYSTEM_IDENTIFIER;
-
-		final List list = this.getList(sourceObjectName, displayNameFields, valueField, true);
-		return list;
+		return this.getList(sourceObjectName, displayNameFields, valueField, true);
 	}
 	
-	/**
-	 * @param type_id - long .
-	 * @param exceedingMaxLimit - String object
-	 * @param selectedContainerName - String
-	 * @param sessionDataBean - SessionDataBean object
-  	 * @param storageType Auto, Manual, Virtual
-	 * @return TreeMap of allocated containers
-	 * @throws BizLogicException throws BizLogicException
-	 */
-	public TreeMap getAllocatedContainerMapForContainer(long type_id, String exceedingMaxLimit,
-			String selectedContainerName, SessionDataBean sessionDataBean, DAO dao, String storageType)
-			throws BizLogicException, DAOException
-	{
-		final List containerList = this.getStorageContainerList(TYPE_CONTAINER, null, null, 0,
-				sessionDataBean, type_id, null, null, storageType);
-		final TreeMap tm = (TreeMap) this.getAllocDetailsForContainers(containerList, dao);
-		return tm;
-	}
-
-	/**
-	 * @param cpId - Long .
-	 * @param specimenClass - String
-	 * @param aliquotCount - int
-	 * @param exceedingMaxLimit - String
-	 * @param sessionData - SessionDataBean object
-	 * @param jdbcDAO - JDBCDAO object
-	 * @return TreeMap of Allocated Contaienrs
-	 * @throws BizLogicException throws BizLogicException
-	 * @throws DAOException throws DAOException
-	 */
-	public TreeMap getAllocatedContainerMapForSpecimen(long cpId, String specimenClass,
-			int aliquotCount, String exceedingMaxLimit, SessionDataBean sessionData, DAO dao)
-			throws BizLogicException, DAOException
-	{
-		final List containerList = this.getStorageContainerList(TYPE_SPECIMEN, cpId, specimenClass,
-				aliquotCount, sessionData, null, null, null,null);
-		final TreeMap tm = (TreeMap) this.getAllocDetailsForContainers(containerList, dao);
-		return tm;
-	}
-
-	/**
-	 * Gets allocated container map for specimen array.
-	 * @param specimen_array_type_id
-	 *            specimen array type id
-	 * @param noOfAliqoutes
-	 *            No. of aliquotes
-	 * @param sessionData - SessionDataBean object
-	 * @param exceedingMaxLimit String
-	 * @return container map
-	 * @throws BizLogicException --
-	 *             throws DAO Exception
-	 * @see edu.wustl.common.dao.JDBCDAOImpl
-	 */
-	public TreeMap getAllocatedContainerMapForSpecimenArray(long specimen_array_type_id,
-			int noOfAliqoutes, SessionDataBean sessionData, String exceedingMaxLimit, DAO dao)
-			throws BizLogicException
-	{
-		final JDBCDAO jdbcDAO = null;
-		try
-		{
-			final List containerList = this.getStorageContainerList(TYPE_SPECIMEN_ARRAY, null,
-					null, 0, sessionData, null, specimen_array_type_id, null, null);
-			final TreeMap tm = (TreeMap) this.getAllocDetailsForContainers(containerList, dao);
-			return tm;
-		}
-		catch (final DAOException daoExp)
-		{
-			this.logger.error(daoExp.getMessage(), daoExp);
-			daoExp.printStackTrace();
-			throw this
-					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
-		}
-	}
-
-	/**
-	 * @param id
-	 *            Identifier of the StorageContainer related to which the
-	 *            collectionProtocol titles are to be retrieved.
-	 * @return List of collectionProtocol title.
-	 * @throws BizLogicException throws BizLogicException
-	 */
-	public List getSpecimenClassList(String id) throws ApplicationException
-	{
-		final String sql = " SELECT SP.SPECIMEN_CLASS CLASS FROM CATISSUE_STOR_CONT_SPEC_CLASS SP "
-				+ "WHERE SP.STORAGE_CONTAINER_ID = " + id;
-		final List resultList = AppUtility.executeSQLQuery(sql);
-		final Iterator iterator = resultList.iterator();
-		final List returnList = new ArrayList();
-		while (iterator.hasNext())
-		{
-			final List list = (List) iterator.next();
-			for (int cnt = 0; cnt < list.size(); cnt++)
-			{
-				final String data = (String) list.get(cnt);
-				returnList.add(data);
-			}
-		}
-		if (returnList.isEmpty())
-		{
-			returnList.add(new String(Constants.NONE));
-		}
-		return returnList;
-	}
-
 	/**
 	 * To get the ids of the CollectionProtocol that the given StorageContainer
 	 * can hold.
@@ -1118,14 +926,16 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		final Collection spcimenArrayTypeCollection = (Collection) this.retrieveAttribute(
 				StorageContainer.class.getName(), container.getId(),
 				"elements(collectionProtocolCollection)");
+		long[] cpList = null;
 		if (spcimenArrayTypeCollection.isEmpty())
 		{
-			return new long[]{-1};
+			cpList = new long[]{-1};
 		}
 		else
 		{
-			return AppUtility.getobjectIds(spcimenArrayTypeCollection);
+			cpList = AppUtility.getobjectIds(spcimenArrayTypeCollection);
 		}
+		return cpList;
 	}
 	
 	/**
@@ -1137,23 +947,23 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	private Collection<SpecimenPosition> getSpecimenPositionCollForContainer(DAO dao,
 			Long containerId) throws BizLogicException
 	{
+		List<SpecimenPosition> specimenPosColl = null;
 		try
 		{
 			if (containerId != null)
 			{
-				final List specimenPosColl = dao.retrieve(SpecimenPosition.class.getName(),
+				specimenPosColl	= dao.retrieve(SpecimenPosition.class.getName(),
 						"storageContainer.id", containerId);
-				return specimenPosColl;
 			}
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
 		}
-		return null;
+		return specimenPosColl;
 	}
 
 	/**
@@ -1162,8 +972,9 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	 * @param dao DAO object
 	 * @param domainObject Abstract Domain object
 	 */
-	public String getObjectId(DAO dao, Object domainObject)
+	public String getObjectId(DAO dao, Object domainObject) throws BizLogicException
 	{
+		String objId = null;
 		if (domainObject instanceof StorageContainer)
 		{
 			final StorageContainer storageContainer = (StorageContainer) domainObject;
@@ -1183,9 +994,10 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 				}
 				catch (final DAOException e)
 				{
-					this.logger.error(e.getMessage(), e);
+					logger.error(e.getMessage(), e);
 					e.printStackTrace();
-					return null;
+					throw this
+					.getBizLogicException(e, e.getErrorKeyName(), e.getMsgValues());
 				}
 			}
 			else
@@ -1196,10 +1008,10 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 			{
 				final StringBuffer sb = new StringBuffer();
 				sb.append(Site.class.getName()).append("_").append(site.getId().toString());
-				return sb.toString();
+				objId = sb.toString();
 			}
 		}
-		return null;
+		return objId;
 	}
 
 	/**
@@ -1212,366 +1024,6 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 	{
 		return Constants.ADD_EDIT_STORAGE_CONTAINER;
 	}
-
-	/**
-	 * Returns a map of allocated containers vs. their respective
-	 * postition maps, for the given containers
-	 * 
-	 * @return Returns a map of allocated containers vs. their respective free
-	 *         locations.
-	 * @throws DAOException
-	 */
-	private Map getAllocDetailsForContainers(List containerList, DAO dao) throws BizLogicException
-	{
-		this.logger.info("No of containers:" + containerList.size());
-
-		final Map containerMap = new TreeMap(new NameValueBeanRelevanceComparator());
-		long relevance = 1;
-		for (final Iterator itr = containerList.listIterator(); itr.hasNext(); relevance++)
-		{
-			final ArrayList container = (ArrayList) itr.next();
-			final Map positionMap = StorageContainerUtil.getAvailablePositionMapForContainer(String
-					.valueOf(container.get(0)), 0, Integer.parseInt(String
-					.valueOf(container.get(2))),
-					Integer.parseInt(String.valueOf(container.get(3))), dao);
-			if (!positionMap.isEmpty())
-			{
-				final NameValueBean nvb = new NameValueBean(container.get(1), container.get(0),
-						relevance);
-				containerMap.put(nvb, positionMap);
-			}
-		}
-
-		return containerMap;
-	}
-
-	/**
-	 * Generic method to return queries for Specimen/Specimen Array/Containers
-	 * @param holdsType
-	 * @param cpId
-	 * @param spClass
-	 * @param aliquotCount
-	 * @param sessionData
-	 * @param containerTypeId
-	 * @param specimen_array_type_id
-	 * @param exceedingLimit
-	 * @return
-	 */
-	private String[] getStorageContainerQueries(String holdsType, Long cpId, String spClass,
-			Integer aliquotCount, SessionDataBean sessionData, Long containerTypeId,
-			Long specimen_array_type_id, String exceedingLimit)
-	{
-		if (holdsType.equals(TYPE_CONTAINER))
-		{
-			return this.getStorageContainerForContainerQuery(containerTypeId, sessionData);
-		}
-		else if (holdsType.equals(TYPE_SPECIMEN_ARRAY))
-		{
-			return this.getStorageContainerForSpecimenArrQuery(specimen_array_type_id, sessionData);
-		}
-		else if (holdsType.equals(TYPE_SPECIMEN))
-		{
-			return this.getStorageContainerForSpecimenQuery(cpId, spClass, aliquotCount,
-					sessionData);
-		}
-
-		return new String[]{};
-	}
-
-	/**
-	 * Gets the query for Specimen Array
-	 * @param specimen_array_type_id
-	 * @param aliquotCount
-	 * @param sessionData
-	 * @param exceedingLimit
-	 * @return
-	 */
-	private String[] getStorageContainerForSpecimenArrQuery(long specimen_array_type_id,
-			SessionDataBean sessionData)
-	{
-		String includeAllIdQueryStr = " OR t4.SPECIMEN_ARRAY_TYPE_ID = '"
-				+ Constants.ARRAY_TYPE_ALL_ID + "'";
-
-		if (!(new Validator().isValidOption(String.valueOf(specimen_array_type_id))))
-		{
-			includeAllIdQueryStr = "";
-		}
-		final StringBuilder sb = new StringBuilder();
-		sb
-				.append("SELECT VIEW1.IDENTIFIER, VIEW1.NAME, VIEW1.ONE_DIMENSION_CAPACITY, VIEW1.TWO_DIMENSION_CAPACITY from ");
-		sb.append("(");
-		sb
-				.append(" SELECT t1.IDENTIFIER,t1.name,c.one_dimension_capacity , c.two_dimension_capacity, (c.ONE_DIMENSION_CAPACITY * c.TWO_DIMENSION_CAPACITY)  CAPACITY ");
-		sb
-				.append(" FROM CATISSUE_CONTAINER t1 JOIN CATISSUE_CAPACITY c on t1.CAPACITY_ID=c.IDENTIFIER ");
-		sb.append(" LEFT OUTER JOIN CATISSUE_STORAGE_CONTAINER t2 on t2.IDENTIFIER=t1.IDENTIFIER ");
-		sb
-				.append(" LEFT OUTER JOIN CATISSUE_SPECIMEN_POSITION K ON t1.IDENTIFIER = K.CONTAINER_ID ");
-		sb
-				.append(" LEFT OUTER JOIN CATISSUE_CONTAINER_POSITION L ON t1.IDENTIFIER = L.PARENT_CONTAINER_ID ");
-		sb.append(" LEFT OUTER join catissue_site S on S.IDENTIFIER = t2.SITE_ID ");
-		sb.append(" WHERE t2.IDENTIFIER IN ");
-		sb
-				.append(" (SELECT t4.STORAGE_CONTAINER_ID from CATISSUE_CONT_HOLDS_SPARRTYPE t4  where t4.SPECIMEN_ARRAY_TYPE_ID = '"
-						+ specimen_array_type_id + "'");
-		sb.append(includeAllIdQueryStr);
-		sb.append(")");
-		if (!sessionData.isAdmin())
-		{
-			sb.append(" AND t2.SITE_ID in (SELECT SITE_ID from CATISSUE_SITE_USERS where USER_ID="
-					+ sessionData.getUserId() + ")");
-		}
-		sb.append("AND t1.ACTIVITY_STATUS='" + Status.ACTIVITY_STATUS_ACTIVE
-				+ "' and S.ACTIVITY_STATUS='Active' and t1.CONT_FULL=0) VIEW1 ");
-		sb
-				.append(" GROUP BY VIEW1.IDENTIFIER, VIEW1.NAME,VIEW1.ONE_DIMENSION_CAPACITY, VIEW1.TWO_DIMENSION_CAPACITY ,VIEW1.CAPACITY ");
-		sb.append(" HAVING (VIEW1.CAPACITY - COUNT(*)) >  0");
-		sb.append(" order by IDENTIFIER");
-		return new String[]{sb.toString()};
-	}
-
-	/**
-	 * Gets the query array for Container
-	 */
-	private String[] getStorageContainerForContainerQuery(long type_id, SessionDataBean sessionData)
-	{
-		final StringBuilder sb = new StringBuilder();
-		sb
-				.append("SELECT VIEW1.IDENTIFIER, VIEW1.NAME, VIEW1.ONE_DIMENSION_CAPACITY, VIEW1.TWO_DIMENSION_CAPACITY FROM  ");
-		sb
-				.append("(SELECT cont.IDENTIFIER, cont.NAME, cap.ONE_DIMENSION_CAPACITY, cap.TWO_DIMENSION_CAPACITY, (cap.ONE_DIMENSION_CAPACITY * cap.TWO_DIMENSION_CAPACITY)  CAPACITY ");
-		sb
-				.append("	FROM CATISSUE_CAPACITY cap JOIN CATISSUE_CONTAINER cont   on cap.IDENTIFIER = cont.CAPACITY_ID  ");
-		sb
-				.append(" LEFT OUTER JOIN CATISSUE_SPECIMEN_POSITION K ON cont.IDENTIFIER = K.CONTAINER_ID ");
-		sb
-				.append("  LEFT OUTER JOIN CATISSUE_CONTAINER_POSITION L ON cont.IDENTIFIER = L.PARENT_CONTAINER_ID ");
-		sb.append(" WHERE cont.IDENTIFIER IN ");
-		sb.append(" (SELECT t4.STORAGE_CONTAINER_ID   FROM CATISSUE_ST_CONT_ST_TYPE_REL t4 ");
-		sb.append(" WHERE (t4.STORAGE_TYPE_ID = '" + type_id);
-		sb.append("' OR t4.STORAGE_TYPE_ID='1') and t4.STORAGE_CONTAINER_ID in ");
-		sb.append(" (select SC.IDENTIFIER from CATISSUE_STORAGE_CONTAINER SC ");
-		sb
-				.append(" join CATISSUE_SITE S on sc.site_id=S.IDENTIFIER and S.ACTIVITY_STATUS!='Closed' ");
-		if (!sessionData.isAdmin())
-		{
-			sb.append(" and S.IDENTIFIER in(SELECT SITE_ID from CATISSUE_SITE_USERS where USER_ID="
-					+ sessionData.getUserId() + ")");
-		}
-		sb.append(")) ");
-		sb.append(" AND cont.ACTIVITY_STATUS='" + Status.ACTIVITY_STATUS_ACTIVE);
-		sb.append("' and cont.CONT_FULL=0 ) VIEW1 ");
-		sb
-				.append(" GROUP BY VIEW1.IDENTIFIER, VIEW1.NAME,VIEW1.ONE_DIMENSION_CAPACITY, VIEW1.TWO_DIMENSION_CAPACITY ,VIEW1.CAPACITY ");
-		sb.append(" HAVING (VIEW1.CAPACITY - COUNT(*)) >  0 ");
-		sb.append(" ORDER BY VIEW1.IDENTIFIER");
-		return new String[]{sb.toString()};
-	}
-
-	/**
-	 * Gets the query array for Specimen Storage Containers
-	 * @param cpId
-	 * @param spClass
-	 * @param aliquotCount
-	 * @param sessionData
-	 * @return
-	 */
-	private String[] getStorageContainerForSpecimenQuery(Long cpId, String spClass,
-			int aliquotCount, SessionDataBean sessionData)
-	{
-		// Containers allowing Only this CP and Specimen Class
-		final String q0 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), IS_CP_UNIQUE, IS_SPCLASS_UNIQUE);
-		// Containers allowing Only this CP but other Specimen Classes also
-		final String q1 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), IS_CP_UNIQUE, IS_SPCLASS_NONUNIQUE);
-		// Containers no CP restriction and just this Specimen Class
-		final String q2 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), null, IS_SPCLASS_UNIQUE);
-		// Containers allowing Other CPs also but just this Specimen Class
-		final String q3 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), IS_CP_NONUNIQUE, IS_SPCLASS_UNIQUE);
-		// Containers allowing Others CPs also and other Specimen Classes too
-		final String q4 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), IS_CP_NONUNIQUE, IS_SPCLASS_NONUNIQUE);
-		//Containers allowing any CP and other Specimen Classes too
-		final String q5 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), null, IS_SPCLASS_NONUNIQUE);
-		//Containers allowing any CP and any Specimen Class
-		final String q6 = this.createSCQuery(cpId, spClass, aliquotCount, sessionData.getUserId(),
-				sessionData.isAdmin(), null, null);
-		return new String[]{q0, q1, q2, q3, q4, q5, q6};
-	}
-
-	/**
-	 * Forms a Query to get the Storage Container list
-	 * @param cpId - Collection Protocol Id
-	 * @param spClass - Specimen Class
-	 * @param aliquotCount - Number of aliquotes that the fetched containers 
-	 * should minimally support. A value of <b>0</b> specifies that there's
-	 * no such restriction
-	 * @param siteId - Site Id
-	 * @return query string
-	 */
-	private String createSCQuery(final Long cpId, final String spClass, int aliquotCount,
-			final Long userId, final boolean isAdmin, final Boolean isCPUnique,
-			final Boolean isSPClassUnique)
-	{
-		final StringBuilder sb = new StringBuilder();
-		sb
-				.append("SELECT VIEW1.IDENTIFIER,VIEW1.NAME,VIEW1.ONE_DIMENSION_CAPACITY,VIEW1.TWO_DIMENSION_CAPACITY,VIEW1.CAPACITY-COUNT(*)  AVAILABLE_SLOTS ");
-		sb
-				.append(" FROM"
-						+ " (SELECT D.IDENTIFIER,D.NAME,F.ONE_DIMENSION_CAPACITY, F.TWO_DIMENSION_CAPACITY,(F.ONE_DIMENSION_CAPACITY * F.TWO_DIMENSION_CAPACITY)  CAPACITY");
-		sb
-				.append(" FROM CATISSUE_CAPACITY F JOIN CATISSUE_CONTAINER D  ON F.IDENTIFIER = D.CAPACITY_ID");
-		sb
-				.append(" LEFT OUTER JOIN CATISSUE_SPECIMEN_POSITION K ON D.IDENTIFIER = K.CONTAINER_ID ");
-		sb.append(" LEFT OUTER JOIN CATISSUE_STORAGE_CONTAINER C ON D.IDENTIFIER = C.IDENTIFIER ");
-		sb.append(" LEFT OUTER JOIN CATISSUE_SITE L ON C.SITE_ID = L.IDENTIFIER ");
-		if (isCPUnique != null) //DO not join on CP if there is no restriction on CP. i.e isCPUnique=null 
-		{
-			sb
-					.append(" LEFT OUTER JOIN CATISSUE_ST_CONT_COLL_PROT_REL A ON A.STORAGE_CONTAINER_ID = C.IDENTIFIER ");
-		}
-		if (isSPClassUnique != null) //DO not join on SP CLS if there is no restriction on SP CLS. i.e isSPClassUnique=null
-		{
-			sb
-					.append(" LEFT OUTER JOIN CATISSUE_STOR_CONT_SPEC_CLASS B ON B.STORAGE_CONTAINER_ID = C.IDENTIFIER ");
-		}
-		sb.append(" WHERE ");
-		if (isCPUnique != null)
-		{
-			sb.append(" A.COLLECTION_PROTOCOL_ID = ");
-			sb.append(cpId);
-			sb.append(" AND ");
-		}
-		if (isSPClassUnique != null)
-		{
-			sb.append("  B.SPECIMEN_CLASS = '");
-			sb.append(spClass);
-			sb.append("'");
-			sb.append(" AND ");
-		}
-		if (!isAdmin)
-		{
-			sb.append(" C.SITE_ID IN (SELECT M.SITE_ID FROM  ");
-			sb.append(" CATISSUE_SITE_USERS M WHERE M.USER_ID = ");
-			sb.append(userId);
-			sb.append(" ) ");
-			sb.append(" AND ");
-		}
-		sb.append("  L.ACTIVITY_STATUS = 'Active' and D.ACTIVITY_STATUS='Active' and D.CONT_FULL=0 "); //Added cont_full condition by Preeti
-		sb.append(") VIEW1  ");
-		sb.append(" GROUP BY IDENTIFIER, VIEW1.NAME, ");
-		sb.append(" VIEW1.ONE_DIMENSION_CAPACITY, ");
-		sb.append(" VIEW1.TWO_DIMENSION_CAPACITY, ");
-		sb.append(" VIEW1.CAPACITY ");
-		if (aliquotCount > 0)
-		{
-			sb.append(" HAVING (VIEW1.CAPACITY - COUNT(*)) >=  ");
-			sb.append(aliquotCount);
-		}
-		else
-		{
-			sb.append(" HAVING (VIEW1.CAPACITY - COUNT(*)) > 0  ");
-		}
-
-		sb.append(this.getStorageContainerCPQuery(isCPUnique));
-
-		sb.append(this.getStorageContainerSPClassQuery(isSPClassUnique));
-
-		sb.append(" ORDER BY VIEW1.IDENTIFIER ");
-
-		Logger.out.debug(String.format("%s:%s:%s", this.getClass().getSimpleName(),
-				"createSCQuery() query ", sb));
-
-		return sb.toString();
-	}
-
-	/**
-	 * Gets the restriction query for Containers for Collection Protocol
-	 * @param isUnique - Specifies the kind of restriction where:
-	 * <li><strong>true</strong> implies that the container should allow only one CP</li>
-	 * <li><strong>false</strong> implies that the container allows more than one CPs</li>
-	 * @return the query string
-	 */
-	private String getStorageContainerCPQuery(Boolean isUnique)
-	{
-
-		final String SC_CP_TABLE_NAME = "CATISSUE_ST_CONT_COLL_PROT_REL";
-		if (isUnique == null) //No restrictions on CP. Any CP condition
-		{
-			final StringBuilder sb = new StringBuilder();
-			sb.append(" AND VIEW1.IDENTIFIER NOT IN ");
-			sb.append(" ( ");
-			sb.append(" SELECT t2.STORAGE_CONTAINER_ID FROM " + SC_CP_TABLE_NAME + " t2 ");
-			sb.append(" ) ");
-			return sb.toString();
-		}
-		else
-		{
-			return this.getSCBaseRestrictionQuery(SC_CP_TABLE_NAME, isUnique);
-		}
-	}
-
-	/**
-	 * Generates the base container restriction string 
-	 * This allows for selection of Containers that allow Single/Multiple CPs,
-	 * as well as Containers that allow Single/Multiple Specimen Classes
-	 * @param tableName - the table name to apply the restriction on
-	 * @param isUnique - specifies the multiplicity of the restriction
-	 * @return the base query string
-	 */
-	private String getSCBaseRestrictionQuery(String tableName, boolean isUnique)
-	{
-		final StringBuilder sb = new StringBuilder();
-		sb.append(" AND  ");
-		sb.append(" (( ");
-		sb.append(" SELECT COUNT(*) ");
-		sb.append(" FROM ");
-		sb.append(tableName);
-		sb.append(" AA WHERE AA.STORAGE_CONTAINER_ID = VIEW1.IDENTIFIER )");
-		if (isUnique)
-		{
-			sb.append(" = 1 ");
-		}
-		else
-		{
-			sb.append(" >1 ");
-		}
-		sb.append(" ) ");
-		return sb.toString();
-	}
-
-	/**
-	 * Gets the restriction query for Containers for Specimen Class
-	 * @param isUnique - Specifies the kind of restriction where:
-	 * <li><strong>true</strong> implies that the container should allow only one type of Specimen</li>
-	 * <li><strong>false</strong> implies that the container allows more than type of Specimens</li>
-	 * @return the query string
-	 */
-	private String getStorageContainerSPClassQuery(Boolean isUnique)
-	{
-		final String SC_SPCLS_TABLE_NAME = "CATISSUE_STOR_CONT_SPEC_CLASS";
-		if (isUnique == null) //No restrictions on CP. Any CP condition
-		{
-			final StringBuilder sb = new StringBuilder();
-			sb.append(" AND ");
-			sb.append(" ( ");
-			sb.append(" SELECT COUNT(*) FROM ");
-			sb.append(SC_SPCLS_TABLE_NAME);
-			sb.append(" AA WHERE AA.STORAGE_CONTAINER_ID = VIEW1.IDENTIFIER ");
-			sb.append(" ) ");
-			sb.append(" =4 "); //No restriction on specimen class means it can store any of the 4 specimen classes
-			return sb.toString();
-		}
-		else
-		{
-			return this.getSCBaseRestrictionQuery("CATISSUE_STOR_CONT_SPEC_CLASS", isUnique);
-		}
-	}
-	
 	/**
 	 * @param dao - DAO object.
 	 * @param sessionDataBean - SessionDataBean object
@@ -1607,7 +1059,7 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final DAOException daoExp)
 		{
-			this.logger.error(daoExp.getMessage(), daoExp);
+			logger.error(daoExp.getMessage(), daoExp);
 			daoExp.printStackTrace();
 			throw this
 					.getBizLogicException(daoExp, daoExp.getErrorKeyName(), daoExp.getMsgValues());
@@ -1647,9 +1099,9 @@ public class StorageContainerBizLogic extends CatissueDefaultBizLogic
 		}
 		catch (final ApplicationException exp)
 		{
-			this.logger.error(exp.getMessage(), exp);
+			logger.error(exp.getMessage(), exp);
 			exp.printStackTrace();
-			ErrorKey errorKey = ErrorKey.getErrorKey(exp.getErrorKeyName());
+			final ErrorKey errorKey = ErrorKey.getErrorKey(exp.getErrorKeyName());
 			throw new BizLogicException(errorKey, exp, exp.getMsgValues());
 		}
 
